2004-01-03  Colin Walters  <walters@verbum.org>

	* src/sj-main.c (reread_cd): Pop statusbar loading message if
	there's no CDROM available.

2003-12-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* omf.make: fix DESTDIR installs and other scrollkeeper problems
	* xmldocs.make: for make distcheck to work

2003-12-15  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Create folders with mode 0777 and let umask do its job instead of
	faffing about with 0750. Closes #129389.

2003-12-08  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Nicer labels (Jens Knutson)

2003-12-08  Ross Burton  <ross@burtonini.com>

	* src/cd-drive.[ch]:
	Updated from bacon.

2003-12-04  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Check for the new GStreamer tagging API in 0.7.2.

	* src/sj-extractor.c:
	Use the new GStreamer tagging API. Thanks Christophe Fergeau!

2003-11-26  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.5.8.

2003-11-25  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	* src/sj-extractor.c:
	Initialise more variables to NULL, thanks teuf.

2003-11-21  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Remove the ? from Extract?

2003-11-20  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Disable all of the widgets in the main window when
	extracting. Patch from Brent Fox <bfox@redhat.com>.

2003-11-20  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* data/sound-juicer.schemas.in:
	* src/sj-extracting.c:
	* src/sj-main.c:
	* src/sj-prefs.c:
	* src/sound-juicer.h:
	Add "Eject when finished" preference.

2003-11-20  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in:
	* src/sj-about.c:
	One doesn't "rip" CDs, one "extracts the audio".

2003-11-20  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/Makefile.am:
	Add a configure flag to turn on deprecation warnings.

2003-11-20  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c: