@@ -103,13 +103,18 @@ eject_cdrom (const char* device, GtkWindow *parent)
   fd = open (device, O_RDONLY | O_NONBLOCK);
   if (fd == -1) {
     GtkWidget *dialog;
+    char *text = g_strdup_printf ("<b>%s</b>\n\n%s: %s",
+                                  _("Could not eject the CD"),
+                                  _("Reason"),
+                                  g_strerror (errno));
+
     dialog = gtk_message_dialog_new (GTK_WINDOW (parent), GTK_DIALOG_MODAL,
                                      GTK_MESSAGE_ERROR,
                                      GTK_BUTTONS_CLOSE,
-                                     g_strdup_printf ("<b>%s</b>\n\n%s: %s",
-                                                      _("Could not eject the CD"),
-                                                      _("Reason"),
-                                                      g_strerror (errno)));
+                                     text);
+
+    g_free (text);
+
     gtk_label_set_use_markup (GTK_LABEL (GTK_MESSAGE_DIALOG (dialog)->label), TRUE);
     gtk_dialog_run (GTK_DIALOG (dialog));
     gtk_widget_destroy (dialog);
@@ -118,13 +123,17 @@ eject_cdrom (const char* device, GtkWindow *parent)
   result = ioctl (fd, CDROMEJECT);
   if (result == -1) {
     GtkWidget *dialog;
+    char *text = g_strdup_printf ("<b>%s</b>\n\n%s: %s",
+                                  _("Could not eject the CD"),
+                                  _("Reason"),
+                                  g_strerror (errno));
+
     dialog = gtk_message_dialog_new (GTK_WINDOW (parent), GTK_DIALOG_MODAL,
                                      GTK_MESSAGE_ERROR,
                                      GTK_BUTTONS_CLOSE,
-                                     g_strdup_printf ("<b>%s</b>\n\n%s: %s",
-                                                      _("Could not eject the CD"),
-                                                      _("Reason"),
-                                                      g_strerror (errno)));
+                                     text);
+    g_free (text);
+
     gtk_label_set_use_markup (GTK_LABEL (GTK_MESSAGE_DIALOG (dialog)->label), TRUE);
     gtk_dialog_run (GTK_DIALOG (dialog));
     gtk_widget_destroy (dialog);
