@@ -1,3 +1,13 @@
+2004-01-03  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extracting.c:
+	* src/sj-extractor.c:
+	* src/sj-main.c:
+	* src/sj-prefs.c:
+	* src/sj-util.c:
+	Plug lots of memory leaks. Patch mostly from Michael Henson
+	<mike@axl.net>.
+
 2004-01-03  Colin Walters  <walters@verbum.org>
 
 	* src/sj-main.c (reread_cd): Pop statusbar loading message if
